Fixed spacing on the main box

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ footer {
 
 .weather-info {
   font-size: smaller;
-  line-height: 2.2;
+  line-height: 1.9;
 }
 
 .main-weather-icon {
